# portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs  projects.rs
static/css/: style.css
templates/: 404.html  index.html
